--- a/css/style.css
+++ b/css/style.css
@@ -178,3 +178,54 @@ span{
 .card-p{
     color: #888;
 }
+
+#team{
+    background-color: #003666;
+    padding: 50px;
+    height: 750px;
+    text-align: center;
+}
+
+#team-h3{
+    color: #fff;
+}
+
+.column-left-right{
+    width: 380px;
+    float: left;
+    padding: 50px;
+}
+
+.oval{
+    border-radius: 50%;
+}
+
+.employee-name{
+    color: #fff;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+
+.employee-description{
+    color: #888;
+    font-size: 15px;
+}
+
+.social{
+    color: white;
+    border: 1px solid #fff;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 2px 10px;
+}
+
+.social:hover{
+    background-color: white;
+    color: #003666;
+}
+
+.column{
+    width: 380px;
+    float: left;
+    padding: 30px;
+}
