--- a/css/style.css
+++ b/css/style.css
@@ -229,3 +229,102 @@ span{
     float: left;
     padding: 30px;
 }
+
+#contact{
+    background: url(../img/iletisim.jpg);
+    background-size: cover;
+    padding: 50px;
+    height: auto;
+    text-align: center;
+}
+
+#h3-contact{
+    color: #fff;
+}
+
+#contact-opaque{
+    background: rgba(255, 255, 255, 0.2);
+    padding: 30px 20px;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    height: 550px;
+}
+
+#form-group{
+    width: 700px;
+    float: left;
+    height: 500px;
+    text-align: left;
+}
+
+#left-form{
+    width: 50%;
+    float: left;
+    padding-right: 5px;
+}
+
+#right-form{
+    width: 50%;
+    float: right;
+    padding-left: 5px;
+}
+
+.form-control{
+    width: 100%;
+    padding: 10px;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    margin: 10px;
+    border-radius: 5px;
+    border: 1px solid #ced4da;
+}
+
+
+textarea{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+input[type="submit"]{
+    cursor: pointer;
+    background-color: #445c6e;
+    font-size: 18px;
+    letter-spacing: 1px;
+    padding: 10px 30px;
+    color:white;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+#address{
+    width: 450px;
+    float: right;
+    padding: 30px;
+    height: 500px;
+    text-align: left;
+}
+
+#address-title{
+    font-size: 30px;
+    color: white;
+}
+
+.address-p{
+    color: #ddd;
+    font-size: 15px;
+    letter-spacing: 1.5px;
+}
+
+#copyright{
+    font-size: 20px;
+    color: white;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+
+#up{
+    font-size: 25px;
+    color: white;
+    margin: 10px;
+}
